# Todolist_with_fastapi

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
backend/api/: db.py  main.py  migrate_db.py
backend/api/cruds/: task.py
backend/api/models/: task.py
backend/api/routers/: task.py
backend/api/schemas/: task.py
frontend/: .dockerignore  .env.local.example  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  postcss.config.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/calendar/: calendar.tsx
frontend/src/components/edittask/: edittask.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/schedule/: TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/types/: tasks.ts
todolist/: package.json
todolist/src/app/: globals.css  layout.tsx
todolist/src/hooks/: useTasks.ts
